# pysim

./: claudelog.txt  main.py  plan.txt  pyproject.toml
pysim_traffic/: __init__.py
pysim_traffic/core/: demand.py  dynamics.py  geometry.py  persist.py  routing.py  state.py
pysim_traffic/pysim_traffic/scenarios/: grid_4way.json
pysim_traffic/scripts/: __init__.py  run_scenario.py
pysim_traffic/ui/: __init__.py  pygame_app.py
